# orderbook

./: .gitignore  CLAUDE.md  COINBASE_SETUP.md  Cargo.toml  README.md  README_SERVICE.md  TEST_TELEGRAM.md  backtest_report.csv  debug_msgpack.py  live_output.txt  orderbook-bot.service
.github/workflows/: ci.yml
src/: adaptive_backtest.rs  adaptive_strategy.rs  arbitrage_benchmark.rs  backtest.rs  benchmarks.rs  coinbase_feed.rs  coinbase_historical.rs  data_loader.rs  hyperliquid_backtest.rs  hyperliquid_feed.rs  hyperliquid_historical.rs  hyperliquid_trade.rs  main.rs  order_executor.rs  orderbook.rs  position_manager.rs  reporting.rs  supabase.rs  telegram.rs  test_live_order.rs  test_market_cycle.rs  test_real_pnl.rs  test_sl_order.rs  test_supabase_log.rs  triangular_arbitrage.rs
