[package]
name = "rust-3"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"], optional = true }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-native-roots"], optional = true }
futures-util = { version = "0.3", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = []
websocket = ["tokio", "tokio-tungstenite", "futures-util"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
