[package]
name = "rust-3"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"], optional = true }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-native-roots"], optional = true }
futures-util = { version = "0.3", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5"
ureq = { version = "2.9", features = ["json"] }
chrono = "0.4"
reqwest = { version = "0.11", features = ["json"], optional = true }
hex = "0.4"
dotenv = "0.15"
secp256k1 = { version = "0.29", features = ["rand", "recovery"], optional = true }
sha3 = { version = "0.10", optional = true }
rmp-serde = { version = "1.1", optional = true }

[features]
default = []
websocket = ["tokio", "tokio-tungstenite", "futures-util", "reqwest", "secp256k1", "sha3", "rmp-serde"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
